--- a/client/bower.json
+++ b/client/bower.json
@@ -5,7 +5,6 @@
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "framework7": "^1.4.2",
-    "gyro.js": "^1.0.0"
+    "framework7": "^1.4.2"
   }
 }
